@@ -1,0 +1,25 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/Attic/youtube-dl-2009.03.03.ebuild,v 1.1 2009/03/20 18:21:53 bangert Exp $
+
+EAPI="2"
+
+DESCRIPTION="A small command-line program to download videos from YouTube."
+HOMEPAGE="http://bitbucket.org/rg3/youtube-dl/"
+SRC_URI="http://bitbucket.org/rg3/${PN}/raw/8dc1b312077f/${PN} -> ${P}"
+
+LICENSE="MIT"
+SLOT="0"
+KEYWORDS="~amd64 ~hppa ~ppc ~ppc64 ~x86"
+IUSE=""
+
+DEPEND=">=dev-lang/python-2.4"
+RDEPEND="${DEPEND}"
+
+src_unpack() {
+	:
+}
+
+src_install() {
+	newbin "${DISTDIR}/${P}" ${PN}
+}
