@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/youtube-dl
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/ChangeLog,v 1.38 2009/03/20 12:27:53 jmbsvicetto Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/ChangeLog,v 1.39 2009/03/20 18:21:53 bangert Exp $
+
+*youtube-dl-2009.03.03 (20 Mar 2009)
+
+  20 Mar 2009; Thilo Bangert <bangert@gentoo.org>
+  +youtube-dl-2009.03.03.ebuild:
+  version bump - bug #246674
 
   20 Mar 2009; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
   metadata.xml:
